--- a/gradle.properties
+++ b/gradle.properties
@@ -57,3 +57,5 @@ mod_group_id=com.moujounakki.archimedesfluids
 mod_authors=MouJouNakki
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Overhauls how fluids flow.
+# JSON Simple library dependency
+implementation 'com.googlecode.json-simple:json-simple:1.1.1'
